@@ -108,11 +108,12 @@ AC_ARG_WITH(platform,
 [case "${target}" in
   sparc-sun-solaris2*) PLATFORM_SPECIFIC=s;;
   sparc-sun-sunos4*)   PLATFORM_SPECIFIC=u;;
+  i?86-*-solaris2*)    PLATFORM_SPECIFIC=s;;  
   *-linux*)            PLATFORM_SPECIFIC=l;;
   alpha-*-osf*)        PLATFORM_SPECIFIC=a;;
-  i?86-*-cygwin32)     PLATFORM_SPECIFIC=w;;
+  i?86-*-cygwin32*)    PLATFORM_SPECIFIC=w;;
   mips-sgi-irix*)      PLATFORM_SPECIFIC=g;;
-  mips-sni-sysv4)      PLATFORM_SPECIFIC=x;;
+  mips-sni-sysv4*)     PLATFORM_SPECIFIC=x;;
   hppa*-hp-hpux*)      PLATFORM_SPECIFIC=h;;
   *)                   ]AC_MSG_ERROR([Unsupported platform "${target}"])[;;
 esac])
